@@ -71,8 +71,8 @@ typedef void (*MapPointerFn)(void *, void *, bool);
 typedef void* (*OverridenMethodFn)(void *, const char *);
 typedef void (*InvokeMethodFn)(void *, void *, void *);
 typedef void* (*CreateInstanceFn)(const char *);
+typedef void* (*GetInstanceFn)(void *, bool);
 typedef void (*InvokeCustomSlotFn)(void*, const char*, void*, void*);
-typedef bool (*IsSmokeClassFn)(void*);
 typedef void (*AddInt)(void*, int);
 typedef void (*AddIntObject)(void*, int, void*);
 typedef void* (*DictToMap)(void*, int);
